# python-project-lvl1

./: .travis.yml  README.md  pyproject.toml
amlaith_brain_game.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
brain_games/: cli.py  engine.py  even.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
