[tool.poetry]
name = "Amlaith_brain_game"
version = "0.1.0"
description = ""
authors = ["Amlaith <47604982+Amlaith@users.noreply.github.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
